Change search text box padding so, the text is fully visible (issue 6702)

--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -164,6 +164,7 @@
     font-size-adjust: inherit;
     direction: ltr;
     height: 19px;
+    padding: 0 2px 0 4px;
 }
 
 /* xxxHonza: the icon is too big
